Fixed layout issues

--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,10 @@ li {
 	border-style: solid;
 }
 
+.addTile {
+	font-size: 2.4em;
+}
+
 #log {
 	font-size: 0.8em;
 	text-align: left;
